tarea num1 tags aprendidos

--- a/tarea1CH.html
+++ b/tarea1CH.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Mi documento</title>
+		<title>Tarea num1: tags aprendidos</title>
 	</head>
 	
 	<body>
