--- a/registro.html
+++ b/registro.html
@@ -12,7 +12,7 @@
 para probar que no eres un bot que escuchas en este audio:</p>
 
 <audio controls>
-	<source src="archivo.mp3" type="audio/mp3"/>
+	<source src="caballo.mp3" type="audio/mp3"/>
 </audio>
 <form>
 	<fieldset border="1">
@@ -125,6 +125,9 @@ para probar que no eres un bot que escuchas en este audio:</p>
 	<form>
 			<fieldset>
 				<legend>Verificacion final</legend>
+					<video controls>
+						<source src="conejo.mp4" type="audio/mp3"/>
+					</video>
 
 				<p>escribe la palabra que ves en el segundo 10 del video:</p>
 					<p>
